--- a/面试题目.md
+++ b/面试题目.md
@@ -39,7 +39,7 @@ show profile cpu for query 【query_id】;
 
 #### 1.1.4explain
 EXPLAIN 或者 DESC命令获取 MySQL 如何执行 SELECT 语句的信息，包括在 SELECT 语句执行过程中表如何连接和连接的顺序。
-<img src=".面试题目_images/20ebc9ca.png"/>
+![](.面试题目_images/20ebc9ca.png)
 <img src=".面试题目_images/7cc9651f.png"/>
 <img src=".面试题目_images/71571e26.png"/>
 1. 插入数据时\
@@ -344,12 +344,12 @@ exist是先执行主查询，再将主查询的语句放到子查询中做验证
 <img src=".面试题目_images/328bc460.png"/>
 
 14.3 日期类型
-<img src=".面试题目_images/87a4bef8.png"/>
+![](.面试题目_images/87a4bef8.png)
 ### 3.有哪些窗口函数？聚合函数用作窗口函数和普通的聚合函数有什么区别？
 
 ### 15 SQL约束类型
 
-<img src=".面试题目_images/66f32b28.png"/>
+![](.面试题目_images/66f32b28.png)
 
 ### 16 什么是游标？
 游标是用来存储查询结果集的数据类型 , 在存储过程和函数中可以使用游标对结果集进行循环的处理。游标的使用包括游标的声明declare cursor for、OPEN、FETCH 和 CLOSE.
